RESOLVED FIXED 216078
OfflineAudioContext incorrectly renders at beginning of output buffer after resuming
https://bugs.webkit.org/show_bug.cgi?id=216078
Summary OfflineAudioContext incorrectly renders at beginning of output buffer after r...
Chris Dumez
Reported 2020-09-02 09:56:22 PDT
OfflineAudioContext incorrectly renders at beginning of output buffer after resuming, instead of rendering where it left off.
Attachments
Patch (85.56 KB, patch)
2020-09-02 10:00 PDT, Chris Dumez
no flags
Patch (86.95 KB, patch)
2020-09-02 10:39 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-09-02 10:00:24 PDT
Geoffrey Garen
Comment 2 2020-09-02 10:09:16 PDT
Comment on attachment 407773 [details] Patch r=me
Chris Dumez
Comment 3 2020-09-02 10:39:12 PDT
Chris Dumez
Comment 4 2020-09-02 11:32:09 PDT
Comment on attachment 407777 [details] Patch Clearing flags on attachment: 407777 Committed r266476: <https://trac.webkit.org/changeset/266476>
Chris Dumez
Comment 5 2020-09-02 11:32:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2020-09-02 11:33:16 PDT
Note You need to log in before you can comment on or make changes to this bug.