OfflineAudioContext incorrectly renders at beginning of output buffer after resuming https://bugs.webkit.org/show_bug.cgi?id=216078

Reviewed by Geoff Garen.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/webaudio/the-audio-api/the-audionode-interface/audionode-disconnect-audioparam-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/adding-events-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/retrospective-exponentialRampToValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/retrospective-linearRampToValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/retrospective-setTargetAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/retrospective-setValueAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-audioparam-interface/retrospective-setValueCurveAtTime-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-biquadfilternode-interface/no-dezippering-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-channelmergernode-interface/audiochannelmerger-disconnect-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-delaynode-interface/no-dezippering-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-gainnode-interface/no-dezippering-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/automation-changes-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-automation-basic-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-pannernode-interface/panner-equalpower-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-stereopanner-interface/no-dezippering-expected.txt:
* web-platform-tests/webaudio/the-audio-api/the-waveshapernode-interface/waveshaper-copy-curve-expected.txt:

Source/WebCore:

OfflineAudioContext incorrectly renders at beginning of output buffer after resuming,
instead of rendering where it left off.

No new tests, rebaselined existing tests.

* Modules/webaudio/OfflineAudioDestinationNode.cpp:
(WebCore::OfflineAudioDestinationNode::offlineRender):
* Modules/webaudio/OfflineAudioDestinationNode.h:

Canonical link: https://commits.webkit.org/228879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266476 268f45cc-cd09-0410-ab3c-d52691b4dbfc